filter url <-> model

--- a/partials/partial-list-list.html
+++ b/partials/partial-list-list.html
@@ -1,6 +1,6 @@
 <div class="m-list">
     <div class="m-list-filter">
-        <p-filter-buttons/>
+        <p-filter-buttons filter-model="shared.filter"/>
     </div>
 
     <div ng-show="loading" class="m-list-items-loading ng-cloak">
