--- a/scss/modules/_button.scss
+++ b/scss/modules/_button.scss
@@ -28,6 +28,12 @@
     color: #B4B4B4;
   }
 
+  &:active {
+    &:before {
+      background: #F6F5F3;
+    }
+  }
+
   > span {
     display: block;
     padding: 0 13px;
